# pep723

./: README.md  pyproject.toml
.github/workflows/: publish.yml  testing.yml
example/: script_with_metadata.py
example/import-case/: mylib.py  script.py
scripts/: run_dev_tool.py
src/pep723/: parser.py  writer.py
src/pep723/tool/: __main__.py  cli.py  venv.py
tests/: test_parser.py  test_writer.py
tests/tool/: test_main.py  test_venv.py
