[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pep723"
description = "TODO write description or delete"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache Software License" }
authors = [{ name = "nikkie", email = "takuyafjp+develop@gmail.com" }]
keywords = ["TODO", "write", "keywords"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ftnext/pep723"

[tool.setuptools.dynamic]
version = { attr = "pep723.__version__" }
