[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pep723"
description = "Implementation of PEP 723 (inline script metadata)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["tomlkit"]
license = { text = "Apache Software License" }
authors = [{ name = "nikkie", email = "takuyafjp+develop@gmail.com" }]
keywords = ["inline script metadata"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ftnext/pep723"

[tool.setuptools.dynamic]
version = { attr = "pep723.__version__" }

[project.optional-dependencies]
dev = [
    "taskipy",
    "autoflake",
    "pyupgrade",
    "black",
    "isort",
    "pytest",
    "pytest-randomly",
    "flake8",
    "mypy",
]

[tool.taskipy.tasks]
pre_test = "task format"
test = "pytest -v"
post_test = "task check"
format = "task format_autoflake && task format_pyupgrade && task format_black && task format_isort"
format_autoflake = "python scripts/run_dev_tool.py autoflake"
format_pyupgrade = "python scripts/run_dev_tool.py pyupgrade"
format_black = "black -l 79 src tests setup.py"
format_isort = "isort --profile black -l 79 src tests setup.py"
check = "task check_flake8 && task check_mypy"
check_flake8 = "flake8 src tests"
check_mypy = "mypy src tests"
